--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 aaa
-<img src='https://bs.serving-sys.com/serving/adServer.bs?cn=display&c=19&mc=imp&pli=22653309&PluID=0&ord=${RANDOM}&rtu=-1' style='position:absolute;border:none;padding:0;margin:0;' height='1' width='1' />
+<img src='https://bs.serving-sys.com/serving/adServer.bs?cn=display&c=19&mc=imp&pli=22653309&PluID=0&ord=${RANDOM}&rtu=-1' style='display:none;position:absolute;border:none;padding:0;margin:0;' height='1' width='1' />
 bbb
 <br>
 <br>
