--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <html>
 <body>
-aaa
-<img src='https://bs.serving-sys.com/serving/adServer.bs?cn=display&c=19&mc=imp&pli=22653309&PluID=0&ord=${RANDOM}&rtu=-1' style='display:none;position:absolute;border:none;padding:0;margin:0;' height='1' width='1' />
 bbb
-<br>
-<br>
+<script src='//i.socdm.com/s/so_itp_lp.js' type='text/javascript'></script>
+<br>aaa
 <br>
 <br>
 
