--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 bbb
-<script src='//i.socdm.com/s/so_itp_lp.js' type='text/javascript'></script>
+<script src='//i.socdm.com/s/so_sg.js?sgid=9818&x_replace=true' type='text/javascript'></script>
 <br>aaa
 <br>
 <br>
