--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 bbb
-aaa<img src="https://jp-axia-verification.m0mentum.net/clear/dsync/14?tid=dcbec66f6baf456ab2aa6ebac02a3b69&amp;pid=290a8d7d42f0463ca0382eb860f3f962&amp;exname=AdStir%28R18%29&amp;tagid=ssp_tag_id&amp;cb=123456789&amp;uuid=&amp;bundle=app_bundle_id&amp;cdata=9918" style="position:absolute;border:none;padding:0;margin:0;" height="1" width="1">bbb
+aaa<img src="https://jp-axia-verification.m0mentum.net/clear/dsync/14?tid=dcbec66f6baf456ab2aa6ebac02a3b69&amp;pid=290a8d7d42f0463ca0382eb860f3f962&amp;exname=AdStir%28R18%29&amp;tagid=ssp_tag_id&amp;cb=123456789&amp;uuid=&amp;bundle=app_bundle_id&amp;cdata=9918" style="position:absolute;border:none;margin:1em;">bbb
 <br>aaa
 <br>
 <br>
