--- a/index.html
+++ b/index.html
@@ -2126,17 +2126,9 @@
 <!-- ****************** AD-SPACE TAG ****************** -->
 <div class="ad-side-top">
 <div id="Rak_IS_News_Rect_unfix" style="width:300px;height:250px;">
-  <script type='text/javascript'>rakutentag_Rak_IS_News.prepare('Rak_IS_News_Rect');</script>
-  <script type='text/javascript'>rakutentag_Rak_IS_News.prepare('Rak_IS_News_Rect');</script>
-  <script type='text/javascript'>rakutentag_Rak_IS_News.prepare('Rak_IS_News_Rect');</script>
-  <script type='text/javascript'>rakutentag_Rak_IS_News.prepare('Rak_IS_News_Rect');</script>
-  <script type='text/javascript'>rakutentag_Rak_IS_News.display('Rak_IS_News_Rect');</script>
-  <noscript>
-	<iframe src="//grp09.ias.rakuten.co.jp/ctrl/?pgcd=Rak_IS_News&frcd=Rak_IS_News_Rect&nsc=1"
-	  width="300" height="250" marginwidth="0" marginheight="0" hspace="0" vspace="0"
-	  frameborder="0" scrolling="no" bordercolor="#000000" allowtransparency="true">
-	</iframe>
-  </noscript>
+<div data-rx-adspot-id="NDI0NjI2ODgyODQwMTk1ODYwMzo2MjQ" style="display:none"></div>
+<script src="//dev-cn-cdn.rx-ad.com/sdk/rx-infeed.js"></script>
+<script type="text/javascript">RX.InFeed.Default.run({"immediately":true})</script>
 </div>
 </div>
 <!-- ****************** /AD-SPACE TAG ****************** -->
