--- a/index2.html
+++ b/index2.html
@@ -1,6 +1,8 @@
 <html>
 <body>
-<script src='//i.socdm.com/s/so_sg.js?sgid=15765' type='text/javascript'></script>
+<div data-rx-adspot-id="NDI0NjI2ODgyODQwMTk1ODYwMzo2MjQ" style="display:none"></div>
+<script src="//dev-cn-cdn.rx-ad.com/sdk/rx-infeed.js"></script>
+<script type="text/javascript">RX.InFeed.Default.run({"immediately":true})</script>
 
 </body>
 </html>
