--- a/index2.html
+++ b/index2.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 <div data-rx-adspot-id="NDI0NjI2ODgyODQwMTk1ODYwMzo2MjQ" style="display:none"></div>
-<script src="//dev-cn-cdn.rx-ad.com/sdk/rx-infeed.js"></script>
+<script src="//dev-cdn.rx-ad.com/sdk/rx-infeed.js"></script>
 <script type="text/javascript">RX.InFeed.Default.run({"immediately":true})</script>
 
 </body>
