--- a/index3.html
+++ b/index3.html
@@ -17,7 +17,7 @@ cv確認
         "dat": ""
     });
     var el = document.createElement('script'); el.type = 'text/javascript'; el.async = true;
-    el.src = (('https:' == document.location.protocol) ? 'https://' : 'http://') + 'js.rx/rx-conversion.js';
+    el.src = (('https:' == document.location.protocol) ? 'https://' : 'http://') + 'dev-cdn.rx-ad.com/sdk/rx-conversion.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(el, s);
   })();
 </script>
