--- a/index2.html
+++ b/index2.html
@@ -1,8 +1,8 @@
 <html>
 <body>
 
-<div data-rx-adspot-id="MTExMjAwNzE2NzkxNDU5ODkwNjo2NDQ" style="display:none"></div>
-<script src="https://dev-cdn.rx-ad.com/sdk/rx-infeed.js"></script>
-<script type="text/javascript">RX.InFeed.Default.run({"immediately":true})</script>
+<div id="rdn-banner-tags" data-adspot-id="1"></div>
+<script src="https://dev-s-cdn.rx-ad.com/js/main.js" async></script>
+
 </body>
 </html>
