--- a/index2.html
+++ b/index2.html
@@ -1,8 +1,9 @@
 <html>
 <body>
 
-<div id="rdn-banner-tags" data-adspot-id="1"></div>
-<script src="https://dev-s-cdn.rx-ad.com/js/main.js" async></script>
+
+<div id="rdn-banner-tags" data-adspot-id="7"></div>
+<script src="https://stg-s-cdn.rmp.rakuten.co.jp/sdk/js/main.js" async></script>
 
 </body>
 </html>
