--- a/index2.html
+++ b/index2.html
@@ -1,6 +1,7 @@
 <html>
 <body>
 
+<img src="https://s-cs.rmp.rakuten.co.jp/?d=2&uid=xxxxxxx" />
 
 <div id="rdn-banner-tags" data-adspot-id="7"></div>
 <script src="https://stg-s-cdn.rmp.rakuten.co.jp/sdk/js/main.js" async></script>
