--- a/index2.html
+++ b/index2.html
@@ -1,10 +1,9 @@
 <html>
 <body>
 
-<img src="https://s-cs.rmp.rakuten.co.jp/?d=2&uid=xxxxxxx" />
+<script src="https://s-cdn.rmp.rakuten.co.jp/sdk/js/aa.js" async></script>
+<div id="rdn-banner-tags" data-aa-id="10002"></div>
 
-<div id="rdn-banner-tags" data-adspot-id="7"></div>
-<script src="https://stg-s-cdn.rmp.rakuten.co.jp/sdk/js/main.js" async></script>
 
 </body>
 </html>
