--- a/index3.html
+++ b/index3.html
@@ -3,24 +3,8 @@
   </head>
 
   <body>
-cv確認
-<script type="text/javascript">
-  (function() {
-    var RX = window.RX = window.RX
-      || {}; RX.ConvContext = RX.ConvContext
-      || {}; RX.ConvContext.queue = RX.ConvContext.queue
-      || [];
-    RX.ConvContext.queue.push({
-        "advertiser_id": 614,
-        "price": 0,
-        "convtype": 1,
-        "dat": ""
-    });
-    var el = document.createElement('script'); el.type = 'text/javascript'; el.async = true;
-    el.src = (('https:' == document.location.protocol) ? 'https://' : 'http://') + 'dev-cdn.rx-ad.com/sdk/rx-conversion.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(el, s);
-  })();
-</script>
+<div id="rdn-banner-tags" data-aa-id="10010"></div>
+<script src="https://s-cdn.rmp.rakuten.co.jp/sdk/js/aa.js" async></script>
 aaa
   </body>
 </html>
