--- a/index2.html
+++ b/index2.html
@@ -1,8 +1,8 @@
 <html>
 <body>
 a
-<script src="https://s-cdn.rmp.rakuten.co.jp/sdk/js/aa.js" async></script>
-<div id="rdn-banner-tags" data-aa-id="10002"></div>
+<script src="https://dev-s-cdn.rx-ad.com/sdk/js/aa.js" async></script>
+<div data-rdn-tag="banner" data-aa-id="72"></div>
 
 
 </body>
