--- a/index2.html
+++ b/index2.html
@@ -4,5 +4,9 @@ a
 <div data-rdn-tag="banner" data-aa-id="93"></div>
 <script src="https://dev-s-cdn.rx-ad.com/sdk/js/aa.js" async></script>
 
+<div data-rdn-tag="banner" data-aa-id="92"></div>
+<script src="https://dev-s-cdn.rx-ad.com/sdk/js/aa.js" async></script>
+
+
 </body>
 </html>
