--- a/index2.html
+++ b/index2.html
@@ -2,8 +2,8 @@
 <body>
 a
 <div data-rdn-tag="banner" data-aa-id="93"></div>
-<script src="https://dev-s-cdn.rx-ad.com/sdk/js/aa.js" async></script>
 
+bbb<br><br>
 <div data-rdn-tag="banner" data-aa-id="92"></div>
 <script src="https://dev-s-cdn.rx-ad.com/sdk/js/aa.js" async></script>
 
