--- a/index2.html
+++ b/index2.html
@@ -7,6 +7,9 @@ bbb<br><br>
 <div data-rdn-tag="banner" data-aa-id="92"></div>
 <script src="https://dev-s-cdn.rx-ad.com/sdk/js/aa.js" async></script>
 
+ccc
+<div data-rdn-tag="banner" data-aa-id="7"></div>
+<script src="https://stg-s-cdn.rmp.rakuten.co.jp/sdk/js/aa.js" async></script>
 
 </body>
 </html>
