--- a/index3.html
+++ b/index3.html
@@ -1,10 +1,27 @@
 <html>
   <head>
+<script async='async' src='https://www.googletagservices.com/tag/js/gpt.js'></script>
+<script>
+  var googletag = googletag || {};
+  googletag.cmd = googletag.cmd || [];
+</script>
+
+<script>
+  googletag.cmd.push(function() {
+    googletag.defineSlot('/22299431/Test_xing', [[480, 320], [1024, 768]], 'div-gpt-ad-1560830392926-0').addService(googletag.pubads());
+    googletag.pubads().enableSingleRequest();
+    googletag.enableServices();
+  });
+</script>
   </head>
 
   <body>
-<div id="rdn-banner-tags" data-aa-id="10010"></div>
-<script src="https://s-cdn.rmp.rakuten.co.jp/sdk/js/aa.js" async></script>
 aaa
+<!-- /22299431/Test_xing -->
+<div id='div-gpt-ad-1560830392926-0'>
+<script>
+googletag.cmd.push(function() { googletag.display('div-gpt-ad-1560830392926-0'); });
+</script>
+</div>
   </body>
 </html>
