--- a/index2.html
+++ b/index2.html
@@ -1,15 +1,9 @@
 <html>
 <body>
-a
-<div data-rdn-tag="banner" data-aa-id="93"></div>
 
 bbb<br><br>
-<div data-rdn-tag="banner" data-aa-id="92"></div>
-<script src="https://dev-s-cdn.rx-ad.com/sdk/js/aa.js" async></script>
-
-ccc
-<div data-rdn-tag="banner" data-aa-id="31"></div>
-<script src="https://stg-s-cdn.rmp.rakuten.co.jp/sdk/js/aa.js" async></script>
+<div data-rdn-tag="banner" data-aa-id="10049"></div>
+<script src="https://s-cdn.rmp.rakuten.co.jp/sdk/js/aa.js" async></script>
 
 </body>
 </html>
