--- a/index2.html
+++ b/index2.html
@@ -2,8 +2,8 @@
 <body>
 
 bbb<br><br>
-<div data-rdn-tag="banner" data-aa-id="10049"></div>
-<script src="https://s-cdn.rmp.rakuten.co.jp/sdk/js/aa.js" async></script>
+<div data-rdn-tag="banner" data-aa-id="124"></div>
+<script src="https:dev-s-cdn.rx-ad.com/sdk/js/aa.js" async></script>
 
 </body>
 </html>
