--- a/index3.html
+++ b/index3.html
@@ -1,27 +1,12 @@
 <html>
   <head>
-<script async='async' src='https://www.googletagservices.com/tag/js/gpt.js'></script>
-<script>
-  var googletag = googletag || {};
-  googletag.cmd = googletag.cmd || [];
-</script>
-
-<script>
-  googletag.cmd.push(function() {
-    googletag.defineSlot('/22299431/Test_xing', [[480, 320], [1024, 768]], 'div-gpt-ad-1560830392926-0').addService(googletag.pubads());
-    googletag.pubads().enableSingleRequest();
-    googletag.enableServices();
-  });
-</script>
   </head>
 
   <body>
+<div data-rdn-tag="banner" data-aa-id="155" data-aa-responsive="true"></div>
+<script src="https://dev-s-cdn.rx-ad.com/js/aa.js" async></script>
+
 aaa
-<!-- /22299431/Test_xing -->
-<div id='div-gpt-ad-1560830392926-0'>
-<script>
-googletag.cmd.push(function() { googletag.display('div-gpt-ad-1560830392926-0'); });
-</script>
-</div>
+
   </body>
 </html>
