--- a/index3.html
+++ b/index3.html
@@ -4,8 +4,7 @@
 
   <body>
 <div data-rdn-tag="banner" data-aa-id="155" data-aa-responsive="true"></div>
-<script src="https://dev-s-cdn.rx-ad.com/js/aa.js" async></script>
-
+<script src="https://dev-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
 aaa
 
   </body>
