--- a/index2.html
+++ b/index2.html
@@ -3,7 +3,7 @@
 
 bbb<br><br>
 <div data-rdn-tag="banner" data-aa-id="124"></div>
-<script src="https://dev-s-cdn.rx-ad.com/js/aa.js" async></script>
+<script src="https://dev-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
 aaaa<br><br>
 </body>
 </html>
