--- a/index4.html
+++ b/index4.html
@@ -1,12 +1,8 @@
 <html>
 <head>
-<!--
-<script type="text/javascript" src="//i.socdm.com/s/so_dmp.js?service_id=ss_nanapi"></script>
--->
 </head>
 <body>
-<script type="text/javascript" src="https://cdn.apvdr.com/js/ScriptLoader.min.js"></script>
-<script type="text/javascript">APV.ScriptLoader.inject('http://bigman-test.scaleout.jp/sdk/js/adg-script-loader-stg.js?id=10211&targetID=adg_10211&displayid=1&adType=FREE&width=320&height=180&async=true&tagver=2.0.0&nofrm=st%3dnoad')</script>
-
+<div data-rdn-tag="banner" data-aa-id="161"></div>
+<script src="https://dev-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
 </body>
 </html>
