--- a/index2.html
+++ b/index2.html
@@ -6,5 +6,7 @@ bbb<br><br>
 <div data-rdn-tag="banner" data-aa-id="124"></div>
 <script src="https://dev-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
 aaaa<br><br>
+<div data-rdn-tag="banner" data-aa-id="124"></div>
+<script src="https://dev-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
 </body>
 </html>
