--- a/index3.html
+++ b/index3.html
@@ -3,7 +3,7 @@
   </head>
 
   <body>
-<div data-rdn-tag="banner" data-aa-id="155" data-aa-responsive="true"></div>
+<div data-rdn-tag="banner" data-aa-id="155" data-aa-responsive="true" data-aa-genre-master-id="1" data-aa-genre-code="100111" data-aa-genre-match="l1"></div>
 <script src="https://dev-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
 aaa
 
