--- a/index3.html
+++ b/index3.html
@@ -3,7 +3,72 @@
   </head>
 
   <body>
+l1<br/><br/>
+564035 <br/>
+CD・DVD > Blu-ray > TVドキュメンタリー<br/>
+表示される。<br/>
 <div data-rdn-tag="banner" data-aa-id="155" data-aa-responsive="true" data-aa-genre-master-id="1" data-aa-genre-code="564035" data-aa-genre-match="l1"></div>
+<br/>
+
+505034<br/>
+CD・DVD > Blu-ray<br/>
+表示される。<br/>
+<div data-rdn-tag="banner" data-aa-id="155" data-aa-responsive="true" data-aa-genre-master-id="1" data-aa-genre-code="505034" data-aa-genre-match="l1"></div>
+<br/>
+
+101240<br/>
+CD・DVD<br/>
+表示される。<br/>
+<div data-rdn-tag="banner" data-aa-id="155" data-aa-responsive="true" data-aa-genre-master-id="1" data-aa-genre-code="101240" data-aa-genre-match="l1"></div>
+<br/>
+
+205900<br/>
+CD・DVD > カセット<br/>
+第一階層は、別のカテゴリだが、表示される。<br/>
+<div data-rdn-tag="banner" data-aa-id="155" data-aa-responsive="true" data-aa-genre-master-id="1" data-aa-genre-code="205900" data-aa-genre-match="l1"></div>
+<br/>
+
+402853<br/>
+デジタルコンテンツ<br/>
+広告出ないのが正しい。
+
+<div data-rdn-tag="banner" data-aa-id="155" data-aa-responsive="true" data-aa-genre-master-id="1" data-aa-genre-code="402853" data-aa-genre-match="l1"></div>
+<br/>
+
+children<br/><br/>
+
+564035 <br/>
+CD・DVD > Blu-ray > TVドキュメンタリー<br/>
+自分自身と同じカテゴリなので、表示される。<br/>
+<div data-rdn-tag="banner" data-aa-id="155" data-aa-responsive="true" data-aa-genre-master-id="1" data-aa-genre-code="564035" data-aa-genre-match="children"></div>
+<br/>
+
+505034<br/>
+CD・DVD > Blu-ray<br/>
+親カテゴリなので、表示される。<br/>
+<div data-rdn-tag="banner" data-aa-id="155" data-aa-responsive="true" data-aa-genre-master-id="1" data-aa-genre-code="505034" data-aa-genre-match="children"></div>
+<br/>
+
+101240<br/>
+CD・DVD<br/>
+親カテゴリなので、表示される。<br/>
+<div data-rdn-tag="banner" data-aa-id="155" data-aa-responsive="true" data-aa-genre-master-id="1" data-aa-genre-code="101240" data-aa-genre-match="children"></div>
+<br/>
+
+205900<br/>
+CD・DVD > カセット<br/>
+第一階層は、別のカテゴリなので、表示されない。<br/>
+<div data-rdn-tag="banner" data-aa-id="155" data-aa-responsive="true" data-aa-genre-master-id="1" data-aa-genre-code="205900" data-aa-genre-match="l1"></div>
+<br/>
+
+402853<br/>
+デジタルコンテンツ<br/>
+広告出ないのが正しい。
+
+<div data-rdn-tag="banner" data-aa-id="155" data-aa-responsive="true" data-aa-genre-master-id="1" data-aa-genre-code="402853" data-aa-genre-match="children"></div>
+<br/>
+
+
 <script src="https://dev-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
 aaa
 
