--- a/index5.html
+++ b/index5.html
@@ -5,16 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<script>
-var xmlHttp;
-xmlHttp = new XMLHttpRequest();
-xmlHttp.withCredentials = true;
-//こっちはエラー起きる
-xmlHttp.open("GET", "http://tg.socdm.com/aux/vast_event?page_id=10392&schedule_id=53835.58575.392934&creative_id=859448&event=firstQuartile&seqid=93283136-f01d-b16f-3e7a-a2f314277bc5", false);
-//こっちはエラー起きない
-//xmlHttp.open("GET", "http://d.socdm.com/adsv/v1?posall=SSPLOC&id=10722&sdkver=1.5.0&sdktype=0&acl=off&t=json3", true);
-xmlHttp.send(null);
-//alert(xmlHttp.responseText);
-</script>
+<div data-rdn-tag="banner" data-aa-id="124" data-aa-responsive="true"></div>
+<script src="https://dev-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
+
 </body>
 </html>
