--- a/index2.html
+++ b/index2.html
@@ -3,10 +3,10 @@
 
 bbb<br><br>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<div data-rdn-tag="banner" data-aa-id="124"></div>
+<div data-rdn-tag="banner" data-rdn-id="124"></div>
 <script src="https://dev-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
 aaaa<br><br>
-<div data-rdn-tag="banner" data-aa-id="124"></div>
+<div data-rdn-tag="banner" data-rdn-id="124"></div>
 <script src="https://dev-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
 
 <div  data-rdn-tag="banner"
