--- a/index5.html
+++ b/index5.html
@@ -1,12 +1,10 @@
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 </head>
 <body>
-<div data-rdn-tag="banner" data-aa-id="124" data-aa-responsive="true"></div>
-<script src="https://dev-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
 
+<div data-rdn-tag="banner" data-rdn-id="321" data-rdn-responsive="true"></div>
+<script src="https://dev-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
 </body>
 </html>
