--- a/index5.html
+++ b/index5.html
@@ -3,8 +3,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 </head>
 <body>
-
-<div data-rdn-tag="banner" data-rdn-id="321" data-rdn-responsive="true"></div>
-<script src="https://dev-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
+aaa
+<div data-rdn-tag="banner" data-rdn-id="11" data-rdn-responsive="true"></div>
+<script src="https://s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
+bbb
 </body>
 </html>
