--- a/index4.html
+++ b/index4.html
@@ -2,7 +2,12 @@
 <head>
 </head>
 <body>
-<div data-rdn-tag="banner" data-aa-id="161"></div>
-<script src="https://dev-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
+<div data-rdn-tag="banner" data-rdn-id="16" data-rdn-responsive="true"></div>
+<div data-rdn-tag="banner" data-rdn-id="16" data-rdn-responsive="true"></div>
+<div data-rdn-tag="banner" data-rdn-id="16" data-rdn-responsive="true"></div>
+<div data-rdn-tag="banner" data-rdn-id="16" data-rdn-responsive="true"></div>
+<div data-rdn-tag="banner" data-rdn-id="16" data-rdn-responsive="true"></div>
+<div data-rdn-tag="banner" data-rdn-id="16" data-rdn-responsive="true"></div>
+<script src="https://s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
 </body>
 </html>
