--- a/index5.html
+++ b/index5.html
@@ -7,5 +7,6 @@ aaa
 <div data-rdn-tag="banner" data-rdn-id="11" data-rdn-responsive="true"></div>
 <script src="https://s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
 bbb
+<div data-rdn-tag="banner" data-rdn-id="18" data-rdn-responsive="true"></div>
 </body>
 </html>
