--- a/index5.html
+++ b/index5.html
@@ -8,5 +8,10 @@ aaa
 <script src="https://s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
 bbb
 <div data-rdn-tag="banner" data-rdn-id="18" data-rdn-responsive="true"></div>
+
+
+dev<br/>
+<div data-rdn-tag="banner" data-rdn-id="124" data-rdn-responsive="true"></div>
+<script src="https://dev-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
 </body>
 </html>
