--- a/index5.html
+++ b/index5.html
@@ -4,14 +4,8 @@
 </head>
 <body>
 aaa
-<div data-rdn-tag="banner" data-rdn-id="11" data-rdn-responsive="true"></div>
-<script src="https://s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
+<div data-rdn-tag="banner" data-rdn-id="12" data-rdn-responsive="true"></div>
+<script src="https://stg-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
 bbb
-<div data-rdn-tag="banner" data-rdn-id="18" data-rdn-responsive="true"></div>
-
-
-dev<br/>
-<div data-rdn-tag="banner" data-rdn-id="124" data-rdn-responsive="true"></div>
-<script src="https://dev-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
 </body>
 </html>
