--- a/index2.html
+++ b/index2.html
@@ -1,20 +1,9 @@
 <html>
 <body>
 
-bbb<br><br>
-<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-<div data-rdn-tag="banner" data-rdn-id="124"></div>
-<script src="https://dev-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
-aaaa<br><br>
-<div data-rdn-tag="banner" data-rdn-id="124"></div>
-<script src="https://dev-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
+<div data-rdn-tag="banner" data-rdn-id="111" data-rdn-responsive="true"></div>
+<script src="https://stg-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
 
-<div  data-rdn-tag="banner"
-  data-aa-id="124"
-  data-aa-responsive="true"
-  data-aa-genre-master-id="1"
-  data-aa-genre-code="564035"
-  data-aa-genre-match="l1"></div>
 
 </body>
 </html>
