--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <!DOCTYPE html>
 <html>
 <body>
-<div data-rdn-tag="banner" data-rdn-id="124"></div>
-<script src="https://dev-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
-
+<div id="rdn-adspot-404-85849993"></div>
+<script>
+var rdntag = rdntag || {};
+rdntag.cmd = rdntag.cmd || [];
+rdntag.cmd.push(function() {
+  rdntag
+    .defineAd(404, 'rdn-adspot-404-85849993')
+  rdntag.display('rdn-adspot-404-85849993');
+});
+</script>
+<script src="https://stg-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
 </body>
 </html>
 
