--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <!DOCTYPE html>
 <html>
 <body>
-<div id="rdn-adspot-404-85849993"></div>
+<div id="rdn-adspot-224-35486421"></div>
 <script>
 var rdntag = rdntag || {};
 rdntag.cmd = rdntag.cmd || [];
 rdntag.cmd.push(function() {
   rdntag
-    .defineAd(404, 'rdn-adspot-404-85849993')
-  rdntag.display('rdn-adspot-404-85849993');
+    .defineAd(224, 'rdn-adspot-224-35486421')
+  rdntag.display('rdn-adspot-224-35486421');
 });
 </script>
-<script src="https://stg-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
+<script src="https://s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
 </body>
 </html>
 
