--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <html>
 <body>
 
-<div id="rdn-adspot-378-75224020"></div>
+<div id="rdn-adspot-681-94047572"></div>
 <script>
 var rdntag = rdntag || {};
 rdntag.cmd = rdntag.cmd || [];
 rdntag.cmd.push(function() {
   rdntag
-    .defineAd(378, 'rdn-adspot-378-75224020')
-  rdntag.display('rdn-adspot-378-75224020');
+    .defineAd(681, 'rdn-adspot-681-94047572')
+  rdntag.display('rdn-adspot-681-94047572');
 });
 </script>
-<script src="https://stg-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
+<script src="https://dev-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
 </body>
 </html>
 
