--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <html>
 <body>
 
-<div id="rdn-adspot-693-63427605"></div>
+<div id="rdn-adspot-279-56414837"></div>
 <script>
 var rdntag = rdntag || {};
 rdntag.cmd = rdntag.cmd || [];
 rdntag.cmd.push(function() {
   rdntag
-    .defineAd(693, 'rdn-adspot-693-63427605')
-  rdntag.display('rdn-adspot-693-63427605');
+    .defineAd(279, 'rdn-adspot-279-56414837')
+  rdntag.display('rdn-adspot-279-56414837');
 });
 </script>
-<script src="https://dev-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
+<script src="https://stg-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
 </body>
 </html>
 
