--- a/index2.html
+++ b/index2.html
@@ -1,9 +1,17 @@
 <html>
 <body>
 
-<div data-rdn-tag="banner" data-rdn-id="111" data-rdn-responsive="true"></div>
-<script src="https://stg-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
-
+<div id="rdn-adspot-224-43319579"></div>
+<script>
+var rdntag = rdntag || {};
+rdntag.cmd = rdntag.cmd || [];
+rdntag.cmd.push(function() {
+  rdntag
+    .defineAd(224, 'rdn-adspot-224-43319579')
+  rdntag.display('rdn-adspot-224-43319579');
+});
+</script>
+<script src="https://s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
 
 </body>
 </html>
