--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@ rdntag.cmd.push(function() {
 });
 </script>
 <script src="https://stg-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
+
+
+<script type="text/javascript">
+var rdnRetargetingParams = {
+  retargetingID: 19,
+};
+</script>
+<script src="https://s-cdn.rmp.rakuten.co.jp/js/rtg.js" async></script>
 </body>
 </html>
 
