--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 
 <!DOCTYPE html>
 <html>
-<body>
-
-<div id="rdn-adspot-437-85430872"></div>
+<head>
 <script>
 var rdntag = rdntag || {};
 rdntag.cmd = rdntag.cmd || [];
 rdntag.cmd.push(function() {
   rdntag
-    .defineAd(437, 'rdn-adspot-437-85430872')
+    .defineAd(437, 'rdn-adspot-437-85430872');
+});
+</script>
+
+</head>
+<body>
+
+<div id="rdn-adspot-437-85430872"></div>
+<script>
+rdntag.cmd.push(function() {
   rdntag.display('rdn-adspot-437-85430872');
 });
 </script>
