--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+
 <script src="https://stg-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
 <script>
 var rdntag = rdntag || {};
 rdntag.cmd = rdntag.cmd || [];
 rdntag.cmd.push(function() {
-  rdntag
-    .defineAd(437, 'rdn-adspot-437-85430872');
+  rdntag.defineAd(437, 'rdn-adspot-437-85430872');
+  rdntag.defineAd(404, 'rdn-adspot-404-88823245');
+  
 });
 </script>
 
@@ -21,13 +23,15 @@ rdntag.cmd.push(function() {
   rdntag.display('rdn-adspot-437-85430872');
 });
 </script>
-
-<script type="text/javascript">
-var rdnRetargetingParams = {
-  retargetingID: 19,
-};
+-----<br/>
+<div id="rdn-adspot-404-88823245"></div>
+<script>
+rdntag.cmd.push(function() {
+  rdntag.display('rdn-adspot-404-88823245');
+});
 </script>
-<script src="https://s-cdn.rmp.rakuten.co.jp/js/rtg.js" async></script>
+
+
 </body>
 </html>
 
