--- a/index2.html
+++ b/index2.html
@@ -1,17 +1,23 @@
 <html>
-<body>
+<head>
 
-<div id="rdn-adspot-224-43319579"></div>
+<script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
 <script>
-var rdntag = rdntag || {};
-rdntag.cmd = rdntag.cmd || [];
-rdntag.cmd.push(function() {
-  rdntag
-    .defineAd(224, 'rdn-adspot-224-43319579')
-  rdntag.display('rdn-adspot-224-43319579');
-});
+  window.googletag = window.googletag || {cmd: []};
+  googletag.cmd.push(function() {
+    googletag.defineSlot('/186845212/Onodera_Test_AMP_Direct', [300, 250], 'div-gpt-ad-1589959955748-0').addService(googletag.pubads());
+    googletag.pubads().enableSingleRequest();
+    googletag.enableServices();
+  });
 </script>
-<script src="https://s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
+</head>
+<body>
+<!-- /186845212/Onodera_Test_AMP_Direct -->
+<div id='div-gpt-ad-1589959955748-0' style='width: 300px; height: 250px;'>
+  <script>
+    googletag.cmd.push(function() { googletag.display('div-gpt-ad-1589959955748-0'); });
+  </script>
+</div>
 
 </body>
 </html>
