--- a/index2.html
+++ b/index2.html
@@ -15,7 +15,9 @@
 <!-- /186845212/Onodera_Test_AMP_Direct -->
 <div id='div-gpt-ad-1589959955748-0' style='width: 300px; height: 250px;'>
   <script>
-    googletag.cmd.push(function() { googletag.display('div-gpt-ad-1589959955748-0'); });
+    googletag.cmd.push(function() { 
+      googletag.display('div-gpt-ad-1589959955748-0');
+     });
   </script>
 </div>
 
