--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 var rdntag = rdntag || {};
 rdntag.cmd = rdntag.cmd || [];
 rdntag.cmd.push(function() {
-  rdntag.defineAd(437, 'rdn-adspot-437-85430872');
+  rdntag.defineAd(437, 'rdn-adspot-437-85430872').setIFA('DUMMY_IFA').setTargeting('k2', ['male', 'female']);
   rdntag.defineAd(404, 'rdn-adspot-404-88823245');
   
 });
