--- a/a2a.html
+++ b/a2a.html
@@ -1,15 +1,39 @@
+
+<!DOCTYPE html>
 <html>
-<body>
-<div id="rdn-adspot-554-91733305"></div>
+<head>
+
+<script src="https://stg-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
 <script>
 var rdntag = rdntag || {};
 rdntag.cmd = rdntag.cmd || [];
 rdntag.cmd.push(function() {
-  rdntag
-    .defineAd(554, 'rdn-adspot-554-91733305')
-  rdntag.display('rdn-adspot-554-91733305');
+  rdntag.defineAd(504, 'rdn-adspot-504-85430872');
+  rdntag.defineAd(505, 'rdn-adspot-505-88823245');
+  
 });
 </script>
-<script src="https://dev-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
+
+</head>
+<body>
+
+市場</br>
+<div id="rdn-adspot-504-85430872"></div>
+<script>
+rdntag.cmd.push(function() {
+  rdntag.display('rdn-adspot-504-85430872');
+});
+</script>
+-----<br/>
+ファッション</br>
+<div id="rdn-adspot-505-88823245"></div>
+<script>
+rdntag.cmd.push(function() {
+  rdntag.display('rdn-adspot-505-88823245');
+});
+</script>
+
+
 </body>
 </html>
+
