--- a/gam.html
+++ b/gam.html
@@ -4,7 +4,7 @@
 <script>
   window.googletag = window.googletag || {cmd: []};
   googletag.cmd.push(function() {
-    googletag.defineSlot('/186845212/video_test', [MISSING_WIDTH, MISSING_HEIGHT], 'div-gpt-ad-1591696444334-0').addService(googletag.pubads());
+    googletag.defineSlot('/186845212/video_test', ['fluid'], 'div-gpt-ad-1591696785962-0').addService(googletag.pubads());
     googletag.pubads().enableSingleRequest();
     googletag.enableServices();
   });
