--- a/index2.html
+++ b/index2.html
@@ -1,25 +1,20 @@
 <html>
 <head>
 
-<script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script>
-<script>
-  window.googletag = window.googletag || {cmd: []};
-  googletag.cmd.push(function() {
-    googletag.defineSlot('/186845212/Onodera_Test_AMP_Direct', [300, 250], 'div-gpt-ad-1589959955748-0').addService(googletag.pubads());
-    googletag.pubads().enableSingleRequest();
-    googletag.enableServices();
-  });
-</script>
 </head>
 <body>
-<!-- /186845212/Onodera_Test_AMP_Direct -->
-<div id='div-gpt-ad-1589959955748-0' style='width: 300px; height: 250px;'>
-  <script>
-    googletag.cmd.push(function() { 
-      googletag.display('div-gpt-ad-1589959955748-0');
-     });
-  </script>
-</div>
 
+
+<div id="rdn-adspot-478-19338679"></div>
+<script>
+var rdntag = rdntag || {};
+rdntag.cmd = rdntag.cmd || [];
+rdntag.cmd.push(function() {
+  rdntag
+    .defineAd(478, 'rdn-adspot-478-19338679')
+  rdntag.display('rdn-adspot-478-19338679');
+});
+</script>
+<script src="https://stg-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
 </body>
 </html>
