--- a/rasta.html
+++ b/rasta.html
@@ -8,7 +8,7 @@ rdntag.cmd = rdntag.cmd || [];
 rdntag.cmd.push(function() {
   rdntag
     .defineAd(286, 'rdn-adspot-286-75871230')
-    .setResponsive(true)
+    .setResponsive(true).setDebug(true)
   rdntag.display('rdn-adspot-286-75871230');
 });
 </script>
