--- a/ex.html
+++ b/ex.html
@@ -4,8 +4,7 @@
 var rdntag = rdntag || {};
 rdntag.cmd = rdntag.cmd || [];
 rdntag.cmd.push(function() {
-  rdntag
-    .defineAd(693, "rdn-adspot-693-41871985")
+  rdntag.defineAd(693, "rdn-adspot-693-41871985").enableSingleRequest();
   rdntag.display("rdn-adspot-693-41871985");
 });
 </script>
