--- a/ex.html
+++ b/ex.html
@@ -5,7 +5,7 @@ var rdntag = rdntag || {};
 rdntag.cmd = rdntag.cmd || [];
 rdntag.cmd.push(function() {
   rdntag.defineAd(693, "rdn-adspot-693-41871985").enableSingleRequest();
-  rdntag.display("rdn-adspot-693-41871985");
+  rdntag.displayWithSingleRequest("rdn-adspot-693-41871985");
 });
 </script>
 <script src="https://dev-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
