--- a/ex.html
+++ b/ex.html
@@ -1,4 +1,15 @@
 <html>
+<body>
+<div id="rdn-adspot-693-41871985"></div>
+<script>
+var rdntag = rdntag || {};
+rdntag.cmd = rdntag.cmd || [];
+rdntag.cmd.push(function() {
+  rdntag.defineAd(693, "rdn-adspot-693-41871985").enableSingleRequest();
+  rdntag.displayWithSingleRequest("rdn-adspot-693-41871985");
+});
+</script>
+
 <div id="rdn-adspot-693-41871985"></div>
 <script>
 var rdntag = rdntag || {};
@@ -9,4 +20,5 @@ rdntag.cmd.push(function() {
 });
 </script>
 <script src="https://dev-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
+</body>>
 </html>
