--- a/index2.html
+++ b/index2.html
@@ -11,10 +11,10 @@ var rdntag = rdntag || {};
 rdntag.cmd = rdntag.cmd || [];
 rdntag.cmd.push(function() {
   rdntag
-    .defineAd(478, 'rdn-adspot-478-19338679')
+    .defineAd(272, 'rdn-adspot-478-19338679')
   rdntag.display('rdn-adspot-478-19338679');
 });
 </script>
-<script src="https://stg-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
+<script src="https://s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
 </body>
 </html>
