--- a/stg.html
+++ b/stg.html
@@ -8,3 +8,4 @@ rdntag.cmd.push(function() {
   rdntag.display("rdn-adspot-478-12377029");
 });
 </script>
+<script src="https://stg-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
