--- a/fiframe.html
+++ b/fiframe.html
@@ -13,7 +13,7 @@
   var d = "";
   d += '<html><head></head>';
   d += '<body>';
-  d += '<script src="'http://localhost:8080/script.js'"></script>';
+  d += '<script src="http://localhost:8080/script.js"></script>';
   d += '<script>inDapIF = true;</script>';
   d += '</body></html>';
   doc.write(d);
