--- a/fiframe.html
+++ b/fiframe.html
@@ -11,9 +11,10 @@
   var doc = iframe.contentWindow.document;
   doc.open();
   var d = "";
+  var src = "http://localhost:8080/script.js";
   d += '<html><head></head>';
   d += '<body>';
-  d += '<script src="http://localhost:8080/script.js"></script>';
+  d += '<script src="'+src+'"></script>';
   d += '<script>inDapIF = true;</script>';
   d += '</body></html>';
   doc.write(d);
