--- a/fiframe.html
+++ b/fiframe.html
@@ -12,11 +12,11 @@
   doc.open();
   var d = "";
   var src = "http://localhost:8080/script.js";
-  d += '<html><head></head>';
-  d += '<body>';
-  d += '<script src="'+src+'"></script>';
-  d += '<script>inDapIF = true;</script>';
-  d += '</body></html>';
+  d += "<html><head></head>";
+  d += "<body>";
+  d += "<script src='+src+'></script>";
+  d += "<script>inDapIF = true;</script>";
+  d += "</body></html>";
   doc.write(d);
   doc.close();
 </script>
