--- a/fiframe.html
+++ b/fiframe.html
@@ -14,7 +14,7 @@
   var src = "http://localhost:8080/script.js";
   d += "<html><head></head>";
   d += "<body>";
-  d += "<script src='+src+'></script>";
+  d += "<script src='"+src+"'></script>";
   d += "<script>inDapIF = true;</script>";
   d += "</body></html>";
   doc.write(d);
