--- a/fiframe.html
+++ b/fiframe.html
@@ -1,6 +1,7 @@
 <div id="ad">
 <script>
   var iframe = document.createElement('iframe');
+  var parentDom = document.getElementById('ad');
   iframe.width = 300;
   iframe.height = 250;
   iframe.frameBorder = "0";
