--- a/moat2.html
+++ b/moat2.html
@@ -8,7 +8,7 @@ rdntag.cmd.push(function() {
     .defineAd(343, "rdn-adspot-343-82603634")
   rdntag.display("rdn-adspot-343-82603634");
 });
-</script>
+</script><br/>
 342 moat
 <div id="rdn-adspot-342-82603634"></div>
 <script>
