--- a/index.html
+++ b/index.html
@@ -2,35 +2,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-<script src="https://stg-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
+<div id="rdn-adspot-320-25306693"></div>
 <script>
 var rdntag = rdntag || {};
 rdntag.cmd = rdntag.cmd || [];
 rdntag.cmd.push(function() {
-  rdntag.defineAd(437, 'rdn-adspot-437-85430872').setIFA('DUMMY_IFA').setTargeting('k2', ['male', 'female']);
-  rdntag.defineAd(404, 'rdn-adspot-404-88823245');
-  
+  rdntag
+    .defineAd(320, "rdn-adspot-320-25306693")
+  rdntag.display("rdn-adspot-320-25306693");
 });
 </script>
-
-</head>
-<body>
-
-<div id="rdn-adspot-437-85430872"></div>
-<script>
-rdntag.cmd.push(function() {
-  rdntag.display('rdn-adspot-437-85430872');
-});
-</script>
------<br/>
-<div id="rdn-adspot-404-88823245"></div>
-<script>
-rdntag.cmd.push(function() {
-  rdntag.display('rdn-adspot-404-88823245');
-});
-</script>
-
+<script src="https://s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
 
 </body>
 </html>
