--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@ var rdntag = rdntag || {};
 rdntag.cmd = rdntag.cmd || [];
 rdntag.cmd.push(function() {
   rdntag
-    .defineAd(320, "rdn-adspot-320-25306693")
+    .defineAd(786, "rdn-adspot-320-25306693")
   rdntag.display("rdn-adspot-320-25306693");
 });
 </script>
-<script src="https://s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
+<script src="https://stg-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
 
 </body>
 </html>
