--- a/index.html
+++ b/index.html
@@ -2,30 +2,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-<div id="rdn-adspot-320-25306693"></div>
+<body>
+<div id="rdn-adspot-876-72233495"></div>
 <script>
 var rdntag = rdntag || {};
 rdntag.cmd = rdntag.cmd || [];
 rdntag.cmd.push(function() {
   rdntag
-    .defineAd(786, "rdn-adspot-320-25306693");
-    document
-      .getElementById('rdn-adspot-320-25306693')
-      .addEventListener('slotResponseReceived', function(e) {
-        console.log(
-          'slotResponseReceived event is called:',
-          e.detail.adReturned,
-          e.detail.status
-        );
-        if (e && e.detail && e.detail.adReturned) {
-          console.log('ad is displayed');
-        }
-      });
-  rdntag.display("rdn-adspot-320-25306693");
+    .defineAd(876, "rdn-adspot-876-72233495")
+  rdntag.display("rdn-adspot-876-72233495");
 });
 </script>
 <script src="https://stg-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
-
 </body>
 </html>
 
