--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         e.src = roundtripUrl;
         o.parentNode.insertBefore(e, o);
     })(window, document);
-    adroll.track("pageView");
+    adroll.track("productView", {"products":[{"product_id":"123", "product_group":"567"}]});
 </script>
 
 
