--- a/index.html
+++ b/index.html
@@ -5,19 +5,18 @@
 <body>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>v
 
-<div id="rdn-adspot-111-31946012"></div>
+<div id="rdn-adspot-1099-39330845"></div>
 <script>
 var rdntag = rdntag || {};
 rdntag.cmd = rdntag.cmd || [];
 rdntag.cmd.push(function() {
   rdntag
-    .defineAd(111, "rdn-adspot-111-31946012");
-  rdntag.display("rdn-adspot-111-31946012");
+    .defineAd(1099, "rdn-adspot-1099-39330845");
+  rdntag.display("rdn-adspot-1099-39330845");
 });
 </script>
+
 <script src="https://stg-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
-
-
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>v
 </body>
 </html>
