--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ var rdntag = rdntag || {};
 rdntag.cmd = rdntag.cmd || [];
 rdntag.cmd.push(function() {
   rdntag
-    .defineAd(1099, "rdn-adspot-1099-39330845");
+    .defineAd(1099, "rdn-adspot-1099-39330845").setDebug(true);
   rdntag.display("rdn-adspot-1099-39330845");
 });
 </script>
