--- a/index2.html
+++ b/index2.html
@@ -4,17 +4,12 @@
 </head>
 <body>
 
-
-<div id="rdn-adspot-478-19338679"></div>
-<script>
-var rdntag = rdntag || {};
-rdntag.cmd = rdntag.cmd || [];
-rdntag.cmd.push(function() {
-  rdntag
-    .defineAd(194, 'rdn-adspot-478-19338679')
-  rdntag.display('rdn-adspot-478-19338679');
-});
+<script type="text/javascript">
+var rdnActivityParams = {
+  code: "12-19",
+};
 </script>
-<script src="https://s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
+<script src="https://s-cdn.rmp.rakuten.co.jp/js/rtg.js" async></script>
+
 </body>
 </html>
